[gd_scene load_steps=7 format=3 uid="uid://cruh8bbcfvyvr"]

[ext_resource type="Script" uid="uid://c1m0rbebcdo4r" path="res://scripts/main_menu.gd" id="1_wu84c"]
[ext_resource type="Texture2D" uid="uid://brp4euwugc18f" path="res://assets/background.png" id="2_wu84c"]
[ext_resource type="Texture2D" uid="uid://cdunkljd6up72" path="res://assets/bottom_ui.png" id="3_8ln24"]
[ext_resource type="FontFile" uid="uid://b25431rxog83j" path="res://assets/fonts/Kenney Blocks.ttf" id="4_wu84c"]

[sub_resource type="LabelSettings" id="LabelSettings_wu84c"]
font = ExtResource("4_wu84c")
font_size = 128
font_color = Color(0.486275, 0.847059, 0.921569, 1)
outline_size = 64
outline_color = Color(0.270588, 0.254902, 0.580392, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_8ln24"]
font = ExtResource("4_wu84c")
font_size = 48
font_color = Color(0.270588, 0.254902, 0.580392, 1)

[node name="Menu" type="Node2D"]
script = ExtResource("1_wu84c")

[node name="background" type="TextureRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("2_wu84c")

[node name="title_label" type="Label" parent="."]
offset_left = 6.0
offset_top = 89.0
offset_right = 573.0
offset_bottom = 476.0
text = "CRUSH
CANDY"
label_settings = SubResource("LabelSettings_wu84c")
horizontal_alignment = 1

[node name="levels_button" type="TextureButton" parent="."]
offset_top = 752.0
offset_right = 576.0
offset_bottom = 844.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(287, 45)
texture_normal = ExtResource("3_8ln24")

[node name="levels_label" type="Label" parent="levels_button"]
layout_mode = 0
offset_left = 6.0
offset_top = 3.0
offset_right = 573.0
offset_bottom = 93.0
text = "level selection"
label_settings = SubResource("LabelSettings_8ln24")
horizontal_alignment = 1

[node name="exit_button" type="TextureButton" parent="."]
offset_top = 879.0
offset_right = 576.0
offset_bottom = 971.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(287, 45)
texture_normal = ExtResource("3_8ln24")

[node name="exit_label" type="Label" parent="exit_button"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 573.0
offset_bottom = 92.0
text = "Exit"
label_settings = SubResource("LabelSettings_8ln24")
horizontal_alignment = 1

[connection signal="mouse_entered" from="levels_button" to="." method="_on_levels_button_mouse_entered"]
[connection signal="mouse_exited" from="levels_button" to="." method="_on_levels_button_mouse_exited"]
[connection signal="pressed" from="levels_button" to="." method="_on_levels_button_pressed"]
[connection signal="mouse_entered" from="exit_button" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="exit_button" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
